yaml/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: api
