yaml/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: demo.entigo.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port: 
              number: 80
